@@ -814,6 +814,11 @@ void CaptureImage(const CaptureOptions& options)
     auto backupRotation = gCurrentRotation;
     gCurrentRotation = options.Rotation;
 
+    if (options.Transparent)
+    {
+        viewport.flags |= VIEWPORT_FLAG_TRANSPARENT_BACKGROUND;
+    }
+
     auto outputPath = ResolveFilenameForCapture(options.Filename);
     auto dpi = CreateDPI(viewport);
     RenderViewport(nullptr, viewport, dpi);
