@@ -49,6 +49,7 @@ struct CaptureOptions
     std::optional<CaptureView> View;
     ZoomLevel Zoom;
     uint8_t Rotation{};
+    bool Transparent;
 };
 
 void screenshot_check();
